--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.3.2",
+    "i18next": "^23.8.2",
+    "react-i18next": "^14.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
